WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34542
wx port: client cannot interrupt or modify new windows
https://bugs.webkit.org/show_bug.cgi?id=34542
Summary
wx port: client cannot interrupt or modify new windows
Kevin Watters
Reported
2010-02-03 15:17:45 PST
Created
attachment 48069
[details]
fires a wx event in createWindow ChomeClient's createWindow has a FIXME about firing an veto-able event.
Attachments
fires a wx event in createWindow
(4.78 KB, patch)
2010-02-03 15:17 PST
,
Kevin Watters
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2010-02-03 15:24:12 PST
Attachment 48069
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/wx/WebView.h:307: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 If any of these errors are false positives, please file a bug against check-webkit-style.
Kevin Ollivier
Comment 2
2010-02-03 16:16:12 PST
Landed in
r54309
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug