Reviewed by Kevin Ollivier.

Add wxWebKitWindowFeatures and have createWindow send a notification for
clients to handle.

https://bugs.webkit.org/show_bug.cgi?id=34542


Canonical link: https://commits.webkit.org/45647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54309 268f45cc-cd09-0410-ab3c-d52691b4dbfc